# Z-Core

./: .gitignore  LICENSE  MANIFEST.in  README.md  README_CN.md  README_EN.md  pyproject.toml
docs/: getting-started.md  migration-from-kitclaw.md  rag-setup.md  release-0.2.0.md
skills/: __init__.py
skills/core/: __init__.py
tests/: __init__.py  helpers.py  test_agent_setup.py  test_config_cli.py  test_governance_audit.py  test_governance_ext.py  test_mcp.py  test_memory_expire.py  test_memory_ops.py  test_observability.py  test_packaging.py  test_rag_integration.py  test_session_lifecycle.py  test_session_pause.py  test_skill_core.py  test_skill_management.py  test_skill_router.py  test_workflow.py  test_zcore_cli.py  test_zcore_context.py  test_zcore_ghost_agent.py  test_zcore_memory.py  test_zcore_runtime.py
v2/design/: V2-AUDIT-REPORT.md  architecture.md  cli.md  context-engine.md  ghost-agent-deep-review.md  governance.md  hermes-as-runtime.md  market-validation.md  memory-engine.md  product-strategy.md  session-manager.md  shared-rules-injection.md  skill-router.md
v2/rfcs/: 001-runtime-vs-scripts.md  002-ghost-agent-backend.md  003-unified-persona-engine.md  004-memory-extraction-pipeline.md  005-embodied-companion-ui.md
zcore/: __init__.py  __main__.py  config.py  paths.py  runtime.py
zcore/cli/: __init__.py  main.py
zcore/compat/: __init__.py  legacy_skills.py
zcore/engines/: __init__.py  agent_setup.py  context.py  ghost_agent.py  governance.py  mcp.py  memory.py  observability.py  router.py  session.py  workflow.py
zcore/hooks/: __init__.py  (+2 more)
(+91 files in other folders)
